Fix height on firefox

--- a/dotfiles/.homepage/style.css
+++ b/dotfiles/.homepage/style.css
@@ -1,9 +1,9 @@
-body {
+html, body {
     font-family: "JetBrainsMono NF", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #ebdbb2;
     text-align: center;
     background: #282828;
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
